# windows-chcp

./: CMakeLists.txt  README.md  main.c  resource.rc
vc2022/: windows-chcp.sln  windows-chcp.vcxproj  windows-chcp.vcxproj.filters
